k8s/service1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - image: service1:0.2
          name: service1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
